--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@picocss/pico": "^1.5.10",
-    "d3": "^7.8.5",
     "csv-parser": "^3.0.0",
+    "d3": "^7.8.5",
     "express": "^4.18.2",
     "json-2-csv": "^4.1.0",
     "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "topojson": "^3.0.2",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.15",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/topojson": "^3.2.6",
