--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@picocss/pico": "^1.5.10",
     "csv-parser": "^3.0.0",
     "d3": "^7.8.5",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
     "express": "^4.18.2",
     "json-2-csv": "^4.1.0",
     "multer": "^1.4.5-lts.1",
